# org2tc

./: .gitignore  .perf_baseline.json  CLAUDE.md  LICENSE.md  README.md  default.nix  flake.nix  lefthook.yml  org2tc  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark.py
tests/: conftest.py  test_fuzz.py  test_org2tc.py
